compiler/testData/checkerWithErrorTypes/quick/ConflictingOverloads.jet
// http://youtrack.jetbrains.net/issue/KT-424

class A {
    <!CONFLICTING_OVERLOADS!>fun a(a: Int): Int<!> = 0

    <!CONFLICTING_OVERLOADS!>fun a(a: Int)<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }
}
